--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -81,7 +81,7 @@
                     <div class="recipe-title-and-favorite flex-row">
                         <h2 class="font chocolate-brown very-big bold">Pizza de Queijo</h2>
                         <div class="view-recipes-favorite">
-                            <img class="icon" src="img/icon-favorite.png">
+                            <img class="icon" src="img/star-icon.png">
                         </div>
                     </div>
                     <div>
@@ -96,7 +96,7 @@
                         <span class="small-box box-brown white">Janta</span>
                         <span class="small-box box-macchiato white">Almoço</span>
                     </div>
-                    <div class="font chocolate-brown">
+                    <div class="justify font chocolate-brown">
                         descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
                         descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
                         descrição 
@@ -109,7 +109,7 @@
                         <img class="icon" src="img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
-                    <div class="font chocolate-brown">
+                    <div class="justify font chocolate-brown">
                         <ul>
                             <li>Ingrediente 1</li>
                             <li>Ingrediente 2</li>
@@ -120,12 +120,12 @@
                 </div>
                 <div class="view-recipes-steps flex-column">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="img/icon-ingredients.png">
+                        <img class="icon" src="img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
-                    <div class="font chocolate-brown">
+                    <div class="justify font chocolate-brown">
                         <ul>
-                            <li>Passo 1</li>
+                            <li>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</li>
                             <li>Passo 2</li>
                             <li>Passo 3</li>
                             <li>Passo 4</li>
