--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -1,5 +1,5 @@
 main {
-    padding: 130px 5%;
+    padding: 130px 5% 40px 5%;
 
     display: flex;
     flex-direction: column;
@@ -237,10 +237,26 @@ aside form input {
 .button-more {
     position: fixed;
 
-    align-self: flex-end;
-    justify-self: center;
+    bottom: 30px;
+    right: 30px;
 }
 
 .button-more img {
     height: 70px;
+}
+
+.height-65 {
+    height: 65%;
+}
+
+.height-35 {
+    height: 35%;
+}
+
+.width-35 {
+    width: 35%;
+}
+
+.width-65 {
+    width: 65%;
 }
