--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
+
     <title>Home page</title>
 </head>
 
@@ -27,7 +28,7 @@
         <nav class="header navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <div class="menu">
-                    <a class="navbar-brand" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="navbar-brand" href="/home"><img src="/img/logo-white-green.png" class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
