edit recipe type page created and being worked on, 90% done

--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -135,7 +135,7 @@
             </div>
             <div class="view-recipes-button">
                 <div class="edit-button">
-                    <button>Editar</button>
+                    <a href="../edit-recipes"><button>Editar</button></a>
                 </div>
             </div>
         </div>
