--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=d, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -17,7 +17,11 @@
     <link rel="stylesheet" type="text/css" href="css/icon_style.css">
     <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
     <link rel="stylesheet" type="text/css" href="css/home_style.css">
-    <title>Home page</title>
+    <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
+    <link rel="stylesheet" type="text/css" href="css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="css/edit_type_style.css">
+
+    <title>Document</title>
 </head>
 
 <body>
@@ -26,6 +30,13 @@
             <div class="container-fluid">
                 <div class="menu">
                     <a class="navbar-brand" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <div class="collapse navbar-collapse" id="navbarText">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link font white" href="/login"><b> </b></a>
+                            </li>
+                        </ul>
+                    </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -35,10 +46,7 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav">
                             <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="/login"><b>Entrar</b></a>
-                            </li>
-                            <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="/signup-1"><b>Cadastrar</b></a>
+                                <a class="nav-link" href="/login"><b>Sair</b></a>
                             </li>
                             <li class="nav-item">
                                 <img src="img/icon-dark-mode-black.png" class="icon nav-link">
@@ -50,43 +58,30 @@
         </nav>
     </header>
     <main>
-        <div class="font big-title green bold">
-            Crie, compartilhe e organize <br> Seu planejamento alimentar em um só lugar!
-        </div>
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/recipes.png" class="d-block w-100" alt="...">
+        <div class="edit-recipe-type">
+            <div class="box gap-4">
+                <h2 class="font chocolate-brown bold big">Editar tipo de receita</h2>
+                <div class="recipe-type-name">
+                    <input type="text" placeholder="Nome do tipo de receita">
                 </div>
-                <div class="carousel-item">
-                    <img src="img/recipes.png" class="d-block w-100" alt="...">
+                <div class="flex-row type-select-color gap-3">
+                    <div class="color-select flex-column">
+                        <h3 class="chocolate-brown font bold">Cor de fundo:</h3>
+                        <input type="color" value="#C08332">
+                    </div>
+                    <div class="color-select flex-column">
+                        <h3 class="chocolate-brown font bold">Cor da fonte:</h3>
+                        <input type="color" value="#ffffff">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="img/recipes.png" class="d-block w-100" alt="...">
+                <div class="edit-button">
+                    <button>Salvar</button>
+                </div>
+                <div class="flex-row delete-icon">
+                    <img class="icon" src="img/icon-delete.png">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-        <a href="/login">LOGIN</a>
-        <a href="/signup-1">SIGNUP 1</a>
-        <a href="/signup-2">SIGNUP 2</a>
-        <a href="/signup-3">SIGNUP 3</a>
-        <a href="/view-recipes">VIEW RECIPES</a>
-        <a href="/edit-recipes">EDIT RECIPES</a>
-        <a href="/edit-recipe-type">EDIT RECIPE TYPE</a>
-        <div>
-
         </div>
     </main>
 </body>
-
 </html>
