--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/edit_type_style.css">
 
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -59,12 +60,12 @@
     </header>
     <main>
         <div class="edit-recipe-type">
-            <div class="box gap-4">
+            <div class="box gap-40">
                 <h2 class="font chocolate-brown bold big">Editar tipo de receita</h2>
                 <div class="recipe-type-name">
                     <input type="text" placeholder="Nome do tipo de receita">
                 </div>
-                <div class="flex-row type-select-color gap-3">
+                <div class="flex-row type-select-color gap-30">
                     <div class="color-select flex-column">
                         <h3 class="chocolate-brown font bold">Cor de fundo:</h3>
                         <input type="color" value="#C08332">
@@ -84,4 +85,5 @@
         </div>
     </main>
 </body>
+
 </html>
