--- a/src/views/edit_recipes.ejs
+++ b/src/views/edit_recipes.ejs
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="css/edit_recipes_style.css">
 
 
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -61,14 +62,14 @@
         </nav>
     </header>
     <main>
-        <form class="recipes-box gap-4">
+        <form class="recipes-box gap-40">
             <div class="view-recipes-top flex-row">
-                <div class="view-recipes-header flex-column gap-3">
+                <div class="view-recipes-header flex-column gap-30">
                     <div class="flex-column">
                         <img class="recipes-img" src="img/pizza.jpg">
                     </div>
                 </div>
-                <div class="view-recipes-content flex-column gap-2">
+                <div class="view-recipes-content flex-column gap-20">
                     <div class="recipe-title-and-favorite flex-row">
                         <input type="text" placeholder="Título" required>
                     </div>
@@ -98,12 +99,12 @@
                 </div>
             </div>
             <div class="view-recipes-bottom flex-row">
-                <div class="view-recipes-ingredients flex-column gap-2">
+                <div class="view-recipes-ingredients flex-column gap-20">
                     <div class="recipes-ingredients-title">
                         <img class="icon" src="img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
-                    <div class="font chocolate-brown flex-column gap-2">
+                    <div class="font chocolate-brown flex-column gap-20">
                         <input type="text" placeholder="Ingrediente 1" maxlength="255" required>
                         <input type="text" placeholder="Ingrediente 2" maxlength="255" required>
                         <input type="text" placeholder="Ingrediente 3" maxlength="255" required>
@@ -115,13 +116,14 @@
                         <span class="yellow font bold small">Adicionar ingrediente</span>
                     </div>
                 </div>
-                <div class="view-recipes-steps flex-column gap-2">
+                <div class="view-recipes-steps flex-column gap-20">
                     <div class="recipes-ingredients-title">
                         <img class="icon" src="img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
-                    <div class="font chocolate-brown flex-column gap-2">
-                        <textarea name="" id="" required>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</textarea>
+                    <div class="font chocolate-brown flex-column gap-20">
+                        <textarea name="" id=""
+                            required>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</textarea>
                         <textarea name="" id="" required>Passo 2</textarea>
                         <textarea name="" id="" required>Passo 3</textarea>
                         <textarea name="" id="" required>Passo 4</textarea>
