--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -16,6 +16,9 @@
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/home_style.css">
+
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Entrar</title>
 </head>
 
