--- a/src/views/signup_3.ejs
+++ b/src/views/signup_3.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=d, initial-scale=1.0">
@@ -8,29 +9,35 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/home_style.css">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Confirmar</title>
 </head>
+
 <body>
     <a href="/"><img src="/img/arrow-back.png" class="back"></a>
     <div class="bg-img sign">
         <div class="container zero-gap">
-            <span class="font superbold big green margin_zero">CONFIRMAR</span>
+            <span class="font superbold big green margin-zero">CONFIRMAR</span>
             <form>
-                <a class="font small bod info " href="">Digite o código de verificação que foi enviado para você por e-mail</a>
+                <a class="font small bod info " href="">Digite o código de verificação que foi enviado para você por
+                    e-mail</a>
                 <div>
                     <input class="width-100" type="text" placeholder="Código" required>
                     <a class="font yellow small bold" href="">Reenviar código</a>
                 </div>
-                <button class="width-100 type="submit">Cadastrar</button>
+                <button class="width-100 type=" submit">Cadastrar</button>
             </form>
         </div>
-        
+
     </div>
 </body>
+
 </html>
