--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -22,6 +22,8 @@
     <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
 
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <title>Document</title>
 </head>
 
@@ -59,13 +61,13 @@
         </nav>
     </header>
     <main>
-        <div class="recipes-box gap-4">
+        <div class="recipes-box gap-40">
             <div class="view-recipes-top flex-row">
-                <div class="view-recipes-header flex-column gap-3">
-                    <div class="flex-row gap-3">
+                <div class="view-recipes-header flex-column gap-30">
+                    <div class="flex-row gap-30">
                         <img class="view-recipes-profile-img rounded-circle" src="img/maria-c.jpg">
                         <div class="flex-column">
-                            <div class="view-recipes-username flex-row gap-2">
+                            <div class="view-recipes-username flex-row gap-20">
                                 <span class="font chocolate-brown bold big">Maria Carolina Bevervanso </span>
                                 <span class="font yellow bold">@Mariasina</span>
                             </div>
@@ -77,7 +79,7 @@
                         <img class="recipes-img" src="img/pizza.jpg">
                     </div>
                 </div>
-                <div class="view-recipes-content flex-column gap-2">
+                <div class="view-recipes-content flex-column gap-20">
                     <div class="recipe-title-and-favorite flex-row">
                         <h2 class="font chocolate-brown very-big bold">Pizza de Queijo</h2>
                         <div class="view-recipes-favorite">
@@ -97,9 +99,11 @@
                         <span class="small-box box-macchiato white">Almoço</span>
                     </div>
                     <div class="justify font chocolate-brown">
-                        descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
-                        descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
-                        descrição 
+                        descrição descrição descrição descrição descrição descrição descrição descrição descrição
+                        descrição descrição descrição
+                        descrição descrição descrição descrição descrição descrição descrição descrição descrição
+                        descrição descrição descrição
+                        descrição
                     </div>
                 </div>
             </div>
@@ -125,7 +129,9 @@
                     </div>
                     <div class="justify font chocolate-brown">
                         <ul>
-                            <li>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</li>
+                            <li>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio
+                                aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate
+                                corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</li>
                             <li>Passo 2</li>
                             <li>Passo 3</li>
                             <li>Passo 4</li>
