--- a/public/css/font_style.css
+++ b/public/css/font_style.css
@@ -1,9 +1,4 @@
-* {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 .font {
     font-family: 'Figtree', sans-serif;
@@ -56,14 +51,6 @@
     text-align: center;
 }
 
-.margin_zero {
-    margin: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-}
-
 .big-title {
     font-size: 3.0rem;
     line-height: 1.3;
@@ -74,6 +61,7 @@
 .justify {
     text-align: justify;
 }
-.bg-yellow {
-    background-color: #C08332;
+
+.no-decoration {
+    text-decoration: none;
 }
