--- a/public/css/nav_bar_style.css
+++ b/public/css/nav_bar_style.css
@@ -3,7 +3,9 @@
     background-size: cover;
     position: fixed;
     width: 100%;
-    height: 90px;
+    height: fit-content;
+
+    padding: 1% 2%;
 
     box-shadow: 0 5px 5px rgba(70, 36, 4, 0.3);
 }
@@ -15,5 +17,10 @@
 }
 
 .navbar-toggler {
-    border: 2px solid ;
+    border: 2px solid #462404;
+
+    height: 100%;
+    padding: 1%;
+
+    align-self: center;
 }
