--- a/src/views/calendar.ejs
+++ b/src/views/calendar.ejs
@@ -20,6 +20,8 @@
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/profile_style.css">
     <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Home page</title>
 </head>
 
@@ -49,55 +51,55 @@
             </div>
         </nav>
     </header>
-    <main class="section-profile gap-3">
+    <main class="section-profile gap-30">
 
         <div class="flex-row width-100 space-between">
             <span class="chocolate-brown big superbold font">Calendário</span>
             <span class="font yellow big superbold">Abril - 2024</span>
         </div>
         <div class="box width-100 height-100 padding-zero calendar">
-                <div class="day-week font white bold">Domingo</div>
-                <div class="day-week font white bold">Segunda</div>
-                <div class="day-week font white bold">Terça</div>
-                <div class="day-week font white bold">Quarta</div>
-                <div class="day-week font white bold">Quinta</div>
-                <div class="day-week font white bold">Sexta</div>
-                <div class="day-week font white bold">Sábado</div>
-                <div class="off-day"></div>
-                <div class="day green superbold font">1</div>
-                <div class="day green superbold font">2</div>
-                <div class="day green superbold font">3</div>
-                <div class="day green superbold font">4</div>
-                <div class="day green superbold font">5</div>
-                <div class="day green superbold font">6</div>
-                <div class="day green superbold font">7</div>
-                <div class="day green superbold font">8</div>
-                <div class="day green superbold font">9</div>
-                <div class="day green superbold font">10</div>
-                <div class="day green superbold font">11</div>
-                <div class="day green superbold font">12</div>
-                <div class="day green superbold font">13</div>
-                <div class="day green superbold font">14</div>
-                <div class="day green superbold font">15</div>
-                <div class="day green superbold font">16</div>
-                <div class="day green superbold font">17</div>
-                <div class="day green superbold font">18</div>
-                <div class="day green superbold font">19</div>
-                <div class="day green superbold font">20</div>
-                <div class="day green superbold font">21</div>
-                <div class="day green superbold font">22</div>
-                <div class="day green superbold font">23</div>
-                <div class="day green superbold font">24</div>
-                <div class="day green superbold font">25</div>
-                <div class="day green superbold font">26</div>
-                <div class="day green superbold font">27</div>
-                <div class="day green superbold font">28</div>
-                <div class="day green superbold font">29</div>
-                <div class="day green superbold font">30</div>
-                <div class="off-day"></div>
-                <div class="off-day"></div>
-                <div class="off-day"></div>
-                <div class="off-day"></div>
+            <div class="day-week font white bold">Domingo</div>
+            <div class="day-week font white bold">Segunda</div>
+            <div class="day-week font white bold">Terça</div>
+            <div class="day-week font white bold">Quarta</div>
+            <div class="day-week font white bold">Quinta</div>
+            <div class="day-week font white bold">Sexta</div>
+            <div class="day-week font white bold">Sábado</div>
+            <div class="off-day"></div>
+            <div class="day green superbold font">1</div>
+            <div class="day green superbold font">2</div>
+            <div class="day green superbold font">3</div>
+            <div class="day green superbold font">4</div>
+            <div class="day green superbold font">5</div>
+            <div class="day green superbold font">6</div>
+            <div class="day green superbold font">7</div>
+            <div class="day green superbold font">8</div>
+            <div class="day green superbold font">9</div>
+            <div class="day green superbold font">10</div>
+            <div class="day green superbold font">11</div>
+            <div class="day green superbold font">12</div>
+            <div class="day green superbold font">13</div>
+            <div class="day green superbold font">14</div>
+            <div class="day green superbold font">15</div>
+            <div class="day green superbold font">16</div>
+            <div class="day green superbold font">17</div>
+            <div class="day green superbold font">18</div>
+            <div class="day green superbold font">19</div>
+            <div class="day green superbold font">20</div>
+            <div class="day green superbold font">21</div>
+            <div class="day green superbold font">22</div>
+            <div class="day green superbold font">23</div>
+            <div class="day green superbold font">24</div>
+            <div class="day green superbold font">25</div>
+            <div class="day green superbold font">26</div>
+            <div class="day green superbold font">27</div>
+            <div class="day green superbold font">28</div>
+            <div class="day green superbold font">29</div>
+            <div class="day green superbold font">30</div>
+            <div class="off-day"></div>
+            <div class="off-day"></div>
+            <div class="off-day"></div>
+            <div class="off-day"></div>
         </div>
     </main>
 
