--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -20,28 +20,32 @@
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
 
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/header_style.css">
     <title>Home page</title>
 </head>
 
 <body>
     <header>
-        <nav class="header navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="header navbar navbar-expand-lg">
+            <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="navbar-brand" href="/home"><img src="/img/logo-white-green.png" class="logo-icon"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <span class="navbar-text">
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav">
-                            <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="#"><b>Sair</b></a>
+                <span class="center">
+                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                        <ul class="flex-row gap-20 padding-zero margin-zero">
+                            <li class="center">
+                                <a class="font chocolate-brown superbold no-decoration"
+                                    href="/"><span>Sair</span></a>
                             </li>
-                            <li class="nav-item">
-                                <img src="img/icon-dark-mode-black.png" class="icon nav-link">
+                            <li class="center">
+                                <img src="img/icon-dark-mode-black.png">
                             </li>
                         </ul>
                     </div>
@@ -53,7 +57,8 @@
         <div class="section">
             <aside>
                 <form action="">
-                    <input class="width-100" type="text" name="" id="" class="box" placeholder="Pesquisar em suas receitas">
+                    <input class="width-100" type="text" name="" id="" class="box"
+                        placeholder="Pesquisar em suas receitas">
                     <a href=""><img src="/img/filter-icon.png" alt=""></a>
                 </form>
 
@@ -74,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="box flex-row gap-5">
+                <div class="box flex-row gap-50">
                     <div class="flex-column center">
                         <img src="/img/calendar-icon.png" alt="">
                         <a class="font chocolate-brown small bold" href="">Calendário</a>
@@ -103,7 +108,6 @@
                         </div>
                     </div>
                 </div>
-
             </aside>
             <article>
                 <div class="recipe box">
