--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,31 +17,37 @@
     <link rel="stylesheet" type="text/css" href="css/icon_style.css">
     <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
     <link rel="stylesheet" type="text/css" href="css/home_style.css">
-    <title>Home page</title>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/header_style.css">
+    <title>Alecrim</title>
 </head>
 
 <body>
     <header>
-        <nav class="header navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="header navbar navbar-expand-lg">
+            <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="navbar-brand" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="padding-zero margin-zero" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <span class="navbar-text">
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav">
-                            <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="/login"><b>Entrar</b></a>
+                <span class="center">
+                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                        <ul class="flex-row gap-20 padding-zero margin-zero">
+                            <li class="center">
+                                <a class="font chocolate-brown superbold no-decoration"
+                                    href="/login"><span>Entrar</span></a>
                             </li>
-                            <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="/signup-1"><b>Cadastrar</b></a>
+                            <li class="center">
+                                <a class="font chocolate-brown superbold no-decoration"
+                                    href="/signup-1"><span>Cadastrar</span></a>
                             </li>
-                            <li class="nav-item">
-                                <img src="img/icon-dark-mode-black.png" class="icon nav-link">
+                            <li class="center">
+                                <img src="img/icon-dark-mode-black.png">
                             </li>
                         </ul>
                     </div>
