--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -20,6 +20,9 @@
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/profile_style.css">
     <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
+
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Home page</title>
 </head>
 
@@ -50,7 +53,7 @@
         </nav>
     </header>
     <main class="section-profile">
-        <div class="flex-column width-100 height-100 gap-3">
+        <div class="flex-column width-100 height-100 gap-30">
             <div class="box flex-row profile height-65 ">
                 <img class="width-35 height-100" src="/img/maria-c.jpg" alt="">
                 <div class="text width-65">
@@ -59,15 +62,16 @@
                         <span class="font yellow">@Mariasina</span>
                     </div>
 
-                    <span class="chocolate-brown font bold">Programadora iniciante buscando novas oportunidades e projetos para criar coisas novas.</span>
+                    <span class="chocolate-brown font bold">Programadora iniciante buscando novas oportunidades e
+                        projetos para criar coisas novas.</span>
 
                     <div>
                         <span class="font green ">Idade: 19 anos</span>
                         <span class="font green ">E-mail: carolbeveer@gmail.com</span>
                     </div>
 
-                    <div class="gap-2">
-                        <div class="flex-row gap-2 width-100">
+                    <div class="gap-20">
+                        <div class="flex-row gap-20 width-100">
                             <img class="fit-contain" src="/img/people-icon.png">
                             <span class="font chocolate-brown">503 seguidores</span>
                         </div>
@@ -75,8 +79,8 @@
                     </div>
                 </div>
             </div>
-            <div class="flex-row width-100 height-35 gap-3">
-                <div class="box width-65 height-100 flex-row space-between padding-bigger gap-5">
+            <div class="flex-row width-100 height-35 gap-30">
+                <div class="box width-65 height-100 flex-row space-between padding-bigger gap-50">
                     <div class="width-50 center flex-column space-between height-100">
                         <span class="font chocolate-brown superbold width-100">Seus tipos de Receitas:</span>
 
