Fixed edit-recipe-type route

--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -27,30 +27,25 @@
 
 <body>
     <header>
-        <nav class="header navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="header navbar navbar-expand-lg">
+            <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="navbar-brand" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link font white" href="/login"><b> </b></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <span class="navbar-text">
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav">
-                            <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="/login"><b>Sair</b></a>
+                <span class="center">
+                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                        <ul class="flex-row gap-20 padding-zero margin-zero">
+                            <li class="center">
+                                <a class="font chocolate-brown superbold no-decoration"
+                                    href="/"><span>Sair</span></a>
                             </li>
-                            <li class="nav-item">
-                                <img src="img/icon-dark-mode-black.png" class="icon nav-link">
+                            <li class="center">
+                                <img src="img/icon-dark-mode-black.png">
                             </li>
                         </ul>
                     </div>
