--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -70,7 +70,7 @@
                         <input type="color" value="#ffffff">
                     </div>
                 </div>
-                <div class="edit-button">
+                <div class="save-button">
                     <button>Salvar</button>
                 </div>
                 <div class="flex-row delete-icon">
