--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src=""></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
@@ -20,7 +21,6 @@
     <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <link rel="stylesheet" type="text/css" href="css/edit_type_style.css">
-
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Document</title>
 </head>
