started working on select color js

--- a/public/css/edit_type_style.css
+++ b/public/css/edit_type_style.css
@@ -21,8 +21,8 @@ main {
 
 .recipe-type-name input {
     width: 100%;
-    background-color: #C08332;
-    color: #ffff;
+    /* background-color: #C08332;
+    color: #ffff; */
 }
 
 .type-select-color {
