created the view day page and addes to routes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -90,6 +90,7 @@
         <a href="/edit-recipes">EDIT RECIPES</a>
         <a href="/edit-recipe-type">EDIT RECIPE TYPE</a>
         <a href="/edit-meal">EDIT MEAL</a>
+        <a href="/day">DAY</a>
         <div>
 
         </div>
