--- a/public/css/font_style.css
+++ b/public/css/font_style.css
@@ -5,6 +5,10 @@
     font-size: 1.2rem;
 }
 
+.icon-font {
+    height: 1.7rem;
+}
+
 .white {
     color: white;
 }
@@ -23,6 +27,7 @@
 
 .very-big {
     font-size: 2.5rem;
+    line-height: 1;
 }
 
 .small {
