--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -10,7 +10,7 @@ main {
 .section {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     gap: 35px;
     
     flex-wrap: wrap;
@@ -59,18 +59,21 @@ aside {
     flex-direction: column;
     
     width: 400px;
+    max-width: 100%;
     gap: 25px;
 }
 
 article {
+    min-width:min-content;
     width: calc(100% - 400px - 35px);
     height: fit-content;
     gap: 25px;
     display: flex;
-    flex-wrap: wrap;
+
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .button {
@@ -151,36 +154,7 @@ aside form input {
     background-size: contain;
 }
 
-.recipe {
-    min-width: 270px;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
 
-    padding: 0;
-}
-
-.recipe-text {
-    height: 60%;
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 5px 10px;
-
-    gap: 5px;
-}
-
-.recipe-text button {
-    background-color: transparent;
-    height: fit-content;
-    width: fit-content;
-}
-
-.recipe-text button img {
-    height: 30px;
-}
 
 .favorite {
     height: 100%;
