--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/header_style.css">
+    <link rel="stylesheet" type="text/css" href="css/recipe_style.css">
     <title>Home page</title>
 </head>
 
@@ -30,7 +31,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -41,8 +43,7 @@
                     <div class="collapse navbar-collapse center" id="navbarContent" style="">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
-                                    href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
                                 <img src="img/icon-dark-mode-black.png">
@@ -127,8 +128,6 @@
                         </div>
                         <div class="flex-row width-100 rows flex-wrap">
                             <div class="meal font supersmall white bold width center">Café da manhã</div>
-                            <div class="meal font supersmall white bold width center">Almoço</div>
-                            <div class="meal font supersmall white bold width center">Almoço</div>
                         </div>
                         <div class="favorite">
                             <button><img src="/img/star-icon.png" alt=""></button>
@@ -136,7 +135,6 @@
                     </div>
                 </div>
             </article>
-
         </div>
         <div class="button-more">
             <a href=""><img src="/img/plus-icon.png" alt=""></a>
