--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -23,28 +23,31 @@
 
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/profile_style.css">
     <title>Home page</title>
 </head>
 
 <body>
     <header>
-        <nav class="header navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="header navbar navbar-expand-lg">
+            <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="navbar-brand" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <span class="navbar-text">
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav">
-                            <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="#"><b>Sair</b></a>
+                <span class="center">
+                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                        <ul class="flex-row gap-20 padding-zero margin-zero">
+                            <li class="center">
+                                <a class="font chocolate-brown superbold no-decoration"
+                                    href="/"><span>Sair</span></a>
                             </li>
-                            <li class="nav-item">
-                                <img src="img/icon-dark-mode-black.png" class="icon nav-link">
+                            <li class="center">
+                                <img src="img/icon-dark-mode-black.png">
                             </li>
                         </ul>
                     </div>
@@ -52,11 +55,11 @@
             </div>
         </nav>
     </header>
-    <main class="section-profile">
-        <div class="flex-column width-100 height-100 gap-30">
-            <div class="box flex-row profile height-65 ">
-                <img class="width-35 height-100" src="/img/maria-c.jpg" alt="">
-                <div class="text width-65">
+    <main class="min-100vh">
+        <div class="flex-column width-100  gap-30">
+            <div class="box flex-row padding-zero profile-box">
+                <img src="/img/maria-c.jpg" alt="">
+                <div class="profile-text">
                     <div>
                         <span class="font chocolate-brown superbold very-big">Maria Carolina Bevervanso</span>
                         <span class="font yellow">@Mariasina</span>
@@ -71,9 +74,9 @@
                     </div>
 
                     <div class="gap-20">
-                        <div class="flex-row gap-20 width-100">
-                            <img class="fit-contain" src="/img/people-icon.png">
-                            <span class="font chocolate-brown">503 seguidores</span>
+                        <div class="flex-row gap-10 width-100 flex-start">
+                            <img class="icon-font fit-contain" src="/img/people-icon.png">
+                            <span class="font chocolate-brown width-100">503 seguidores</span>
                         </div>
                         <button>Editar</button>
                     </div>
