--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -96,13 +96,13 @@
                         <a href=""><img src="/img/eye-icon.png" alt=""></a>
                     </div>
                     <div class="sec">
-                        <div class="meal font small white bold">Café da manhã</div>
+                        <div class="meal font small white bold width-100">Café da manhã</div>
                         <div class="recipes-link">
-                            <a href="" class="font small chocolate-brown bold">Pão de queijo</a>
+                            <a href="" class="font small chocolate-brown bold width-100">Pão de queijo</a>
                         </div>
                     </div>
                     <div class="sec">
-                        <div class="meal font small white bold">Café da manhã</div>
+                        <div class="meal font small white bold width-100">Café da manhã</div>
                         <div class="recipes-link">
                             <a href="" class="font small chocolate-brown bold">Pão de queijo</a>
                         </div>
@@ -125,8 +125,10 @@
                                 <span class="font small green">2 porções</span>
                             </div>
                         </div>
-                        <div class="flex-row width-100 rows flex-wrap">
+                        <div class="flex-row width-100 gap-10 flex-start flex-wrap">
                             <div class="meal font supersmall white bold width center">Café da manhã</div>
+                            <div class="meal font supersmall white bold width center">Almoço</div>
+                            <div class="meal font supersmall white bold width center">Almoço</div>
                             <div class="meal font supersmall white bold width center">Almoço</div>
                             <div class="meal font supersmall white bold width center">Almoço</div>
                         </div>
@@ -135,6 +137,7 @@
                         </div>
                     </div>
                 </div>
+                
             </article>
 
         </div>
