working on edit profile page

--- a/src/views/edit_meal.ejs
+++ b/src/views/edit_meal.ejs
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="css/edit_type_style.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     
-    <title>Document</title>
+    <title>Editar Refeição</title>
 </head>
 
 <body>
