--- a/src/views/calendar.ejs
+++ b/src/views/calendar.ejs
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Home page</title>
+    <title>Calendário</title>
 </head>
 
 <body>
