--- a/src/views/day.ejs
+++ b/src/views/day.ejs
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/day_style.css">
     <link rel="stylesheet" type="text/css" href="css/small_box_style.css">
-    <title>Document</title>
+    <title>Dia</title>
 </head>
 
 <body>
