--- a/src/views/edit_recipes.ejs
+++ b/src/views/edit_recipes.ejs
@@ -25,7 +25,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document</title>
+    <title>Editar Receita</title>
 </head>
 
 <body>
