--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/header_style.css">
     <link rel="stylesheet" type="text/css" href="css/recipe_style.css">
-    <title>Home page</title>
+    <title>Home</title>
 </head>
 
 <body>
