--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -91,6 +91,7 @@
         <a href="/edit-recipe-type">EDIT RECIPE TYPE</a>
         <a href="/edit-meal">EDIT MEAL</a>
         <a href="/day">DAY</a>
+        <a href="/edit-profile">EDIT PROFILE</a>
         <div>
 
         </div>
