--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <title>Document</title>
+    <title>Receita</title>
 </head>
 
 <body>
