--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -24,6 +24,8 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/profile_style.css">
+    <link rel="stylesheet" type="text/css" href="css/header_style.css">
+
     <title>Home page</title>
 </head>
 
@@ -32,7 +34,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -43,8 +46,7 @@
                     <div class="collapse navbar-collapse center" id="navbarContent" style="">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
-                                    href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
                                 <img src="img/icon-dark-mode-black.png">
@@ -55,53 +57,39 @@
             </div>
         </nav>
     </header>
-    <main class="min-100vh">
-        <div class="flex-column width-100  gap-30">
-            <div class="box flex-row padding-zero profile-box">
-                <img src="/img/maria-c.jpg" alt="">
-                <div class="profile-text">
-                    <div>
-                        <span class="font chocolate-brown superbold very-big">Maria Carolina Bevervanso</span>
-                        <span class="font yellow">@Mariasina</span>
-                    </div>
+    <main class="min-100vh gap-30" id="profile">
+        <div class="box width-100 padding-zero">
+            <img class="main-img" src="/img/maria-c.jpg">
+            <div>
+                <div class="flex-column">
+                    <span class="font chocolate-brown superbold very-big">Maria Carolina Bevervanso</span>
+                    <span class="font yellow">@Mariasina</span>
+                </div>
 
-                    <span class="chocolate-brown font bold">Programadora iniciante buscando novas oportunidades e
-                        projetos para criar coisas novas.</span>
+                <span class="chocolate-brown font bold">Programadora iniciante buscando novas oportunidades e projetos
+                    para criar coisas novas.</span>
 
-                    <div>
-                        <span class="font green ">Idade: 19 anos</span>
-                        <span class="font green ">E-mail: carolbeveer@gmail.com</span>
-                    </div>
+                <div class="flex-column">
+                    <span class="font green ">Idade: 19 anos</span>
+                    <span class="font green ">E-mail: carolbeveer@gmail.com</span>
+                </div>
 
-                    <div class="gap-20">
-                        <div class="flex-row gap-10 width-100 flex-start">
-                            <img class="icon-font fit-contain" src="/img/people-icon.png">
-                            <span class="font chocolate-brown width-100">503 seguidores</span>
-                        </div>
-                        <button>Editar</button>
+                <div class="gap-20">
+                    <div class="flex-row gap-10 width-100 flex-start">
+                        <img class="icon-font fit-contain" src="/img/people-icon.png">
+                        <span class="font chocolate-brown width-100">503 seguidores</span>
                     </div>
+                    <button class="width-100">Editar</button>
                 </div>
             </div>
-            <div class="flex-row width-100 height-35 gap-30">
-                <div class="box width-65 height-100 flex-row space-between padding-bigger gap-50">
-                    <div class="width-50 center flex-column space-between height-100">
-                        <span class="font chocolate-brown superbold width-100">Seus tipos de Receitas:</span>
-
-                        <button class="width-100 bg-yellow">Adicionar</button>
-                    </div>
-                    <div class="width-50 center flex-column space-between height-100">
-                        <span class="font chocolate-brown superbold width-100">Seus tipos de Refeições:</span>
-
-                        <button class="width-100 bg-yellow">Adicionar</button>
-                    </div>
-                </div>
-                <div class="box width-35">
-                    asdf
-                </div>
+        </div>
+        
+        <div class="flex-row" id="main-info">
+            <div class="box">
+                
             </div>
+        </div>
     </main>
-
-    </div>
 </body>
 
 </html>
