--- a/src/views/edit_recipe_type.ejs
+++ b/src/views/edit_recipe_type.ejs
@@ -53,21 +53,21 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="min-100vh">
         <div class="edit-recipe-type">
             <div class="box gap-40">
                 <h2 class="font chocolate-brown bold big">Editar tipo de receita</h2>
                 <div class="recipe-type-name" >
-                    <input id="#color-box" type="text" placeholder="Nome do tipo de receita">
+                    <input id="color-box" type="text" placeholder="Nome do tipo de receita">
                 </div>
                 <div class="flex-row type-select-color gap-30">
                     <div class="color-select flex-column">
                         <h3 class="chocolate-brown font bold">Cor de fundo:</h3>
-                        <input id="#color-selector-background" type="color" value="#C08332">
+                        <input id="color-selector-background" type="color" value="#C08332">
                     </div>
                     <div class="color-select flex-column">
                         <h3 class="chocolate-brown font bold">Cor da fonte:</h3>
-                        <input id="#color-selector-font" type="color" value="#ffffff">
+                        <input id="color-selector-font" type="color" value="#ffffff">
                     </div>
                 </div>
                 <div class="save-button">
@@ -80,7 +80,7 @@
         </div>
     </main>
 
-    <script src="js/select_color.js" defer></script>
+    <script src="/js/select_color.js" defer></script>
 </body>
 
 </html>
