--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -84,9 +84,47 @@
             </div>
         </div>
         
-        <div class="flex-row" id="main-info">
-            <div class="box">
-                
+        <div class="space-between flex-wrap show-box" id="main-info">
+            <div class="box third gap-20 space-between">
+                <span class="font chocolate-brown superbold big width-100">Meus tipos de receitas</span>
+                <div class="flex-row width-100 gap-10 flex-start flex-wrap">
+                    <div class="meal font supersmall white bold half center">Café da manhã</div>
+                </div>
+                <button class="width-100 bg-yellow">Editar</button>
+            </div>
+            <div class="box third gap-20 space-between">
+                <span class="font chocolate-brown superbold big width-100">Minhas refeições</span>
+                <div class="flex-row width-100 gap-10 flex-start flex-wrap">
+                    <div class="meal font supersmall white bold half center">Café da manhã</div>
+                    <div class="meal font supersmall white bold half center">Café da manhã</div>
+                    <div class="meal font supersmall white bold half center">Café da manhã</div>
+                </div>
+                <button class="width-100 bg-yellow">Editar</button>
+            </div>
+            <div class="box third flex-colum space-betweenn gap-10">
+                <div class="width-max height-100 center flex-column">
+                    <div class="flex-row gap-10 flex-start height-min width-100">
+                        <img src="/img/trophy-icon.png" class="trophy">
+                        <div class="flex-column height-fit">
+                            <span class="font bold small">Sua receita mais consumida no último mês</span>
+                            <a href="" class="font bold yellow small">Pizza de queijo</a>
+                        </div>
+                    </div>
+                    <div class="flex-row gap-10 flex-start height-min width-100">
+                        <img src="/img/trophy-icon.png" class="trophy">
+                        <div class="flex-column height-fit">
+                            <span class="font bold small">Sua refeição mais consumida no último mês</span>
+                            <a href="" class="font bold yellow small">Pizza de queijo</a>
+                        </div>
+                    </div>
+                    <div class="flex-row gap-10 flex-start height-min width-100">
+                        <img src="/img/trophy-icon.png" class="trophy">
+                        <div class="flex-column height-fit">
+                            <span class="font bold small">Seu tipo mais consumida no último mês</span>
+                            <a href="" class="font bold yellow small">Pizza de queijo</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
