--- a/public/css/profile_style.css
+++ b/public/css/profile_style.css
@@ -37,7 +37,10 @@
     flex-direction: column;
 }
 
-
+.trophy {
+    max-height: 100%;
+    height: 3rem;
+}
 
 .padding-bigger {
     padding: 2.5%;
