--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,14 @@
     height: 35%;
 }
 
+.height-fit {
+    height: fit-content;
+}
+
+.height-min {
+    height: min-content;
+}
+
 /* width */
 
 .width-100 {
@@ -67,6 +75,18 @@
 
 .width-35 {
     width: 35%;
+}
+
+.width-max {
+    width: max-content;
+}
+
+.third {
+    width: 32%;
+}
+
+.half {
+    width: 47.5%;
 }
 
 /* format */
